--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Amanda Newton - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Amanda Newton</h1>
+    <header>
+        <h1>Amanda Newton</h1>
+   </header>
     <h2>Contact</h2>
 
     <form action="/action_page.php">
@@ -22,6 +24,9 @@
         <input type="submit" value="Submit">
       </form>
 
-
+      <footer>
+        copyright
+    </footer>
+    
 </body>
 </html>
