--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Amanda Newton - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Amanda Newton</h1>
+   <header>
+        <h1>Amanda Newton</h1>
+   </header>
     <h2>Portfolio</h2>
 
     <img src="assets/images/abstract1.jpg" alt="">
@@ -18,8 +20,9 @@
     <img src="assets/images/abstract4.jpg" alt="">
     <img src="assets/images/abstract5.jpg" alt="">
 
-
-
+    <footer>
+        copyright
+    </footer>
 
 
 </body>
