--- a/contact.html
+++ b/contact.html
@@ -11,22 +11,27 @@
 <body>
     <header>
         <h1>Amanda Newton</h1>
+        <a href="./index.html">About</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
    </header>
-    <h2>Contact</h2>
+   <div class="maincontent">
+        <h2>Contact</h2>
 
-    <form action="/action_page.php">
-        Name:<br>
-        <input type="text" name="firstname" value="John Smith"><br><br>
-        Email:<br>
-        <input type="email" name="email" value="example@gmail.com"><br><br>
-        Message:<br>
-        <textarea name="message" rows="10" cols="30"></textarea><br><br>
-        <input type="submit" value="Submit">
-      </form>
+        <form action="/action_page.php">
+            Name:<br>
+            <input type="text" name="firstname" value="John Smith"><br><br>
+            Email:<br>
+            <input type="email" name="email" value="example@gmail.com"><br><br>
+            Message:<br>
+            <textarea name="message" rows="10" cols="30"></textarea><br><br>
+            <input type="submit" value="Submit">
+        </form>
+      </div>
 
       <footer>
         copyright
     </footer>
-    
+
 </body>
 </html>
