--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Amanda Newton - Contact</title>
+    <title>Amanda Newton - Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <script src="main.js"></script>
@@ -11,14 +11,19 @@
 <body>
    <header>
         <h1>Amanda Newton</h1>
+        <a href="./index.html">About</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
    </header>
-    <h2>Portfolio</h2>
+   <div class="maincontent">
+        <h2>Portfolio</h2>
 
-    <img src="assets/images/abstract1.jpg" alt="">
-    <img src="assets/images/abstract2.jpg" alt="">
-    <img src="assets/images/abstract3.jpg" alt="">
-    <img src="assets/images/abstract4.jpg" alt="">
-    <img src="assets/images/abstract5.jpg" alt="">
+        <img src="assets/images/abstract1.jpg" alt="">
+        <img src="assets/images/abstract2.jpg" alt="">
+        <img src="assets/images/abstract3.jpg" alt="">
+        <img src="assets/images/abstract4.jpg" alt="">
+        <img src="assets/images/abstract5.jpg" alt="">
+    </div>
 
     <footer>
         copyright
