--- a/contact.html
+++ b/contact.html
@@ -8,29 +8,33 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <script src="main.js"></script>
 </head>
-<body>
+<body background="./assets/images/positive.png">
+
     <header>
         <h1>Amanda Newton</h1>
-        <a href="./index.html">About</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./contact.html">Contact</a>
+        <div id="links">       
+            <a id="about" href="./index.html">About</a>
+            <a id="portfolio" href="./portfolio.html">Portfolio</a>
+            <a id="contact" href="./contact.html">Contact</a>
+        </div> 
    </header>
+
    <div class="maincontent">
         <h2>Contact</h2>
 
         <form action="/action_page.php">
             Name:<br>
-            <input type="text" name="firstname" value="John Smith"><br><br>
+            <input type="text" name="firstname" value="John Smith" class="form"><br><br>
             Email:<br>
-            <input type="email" name="email" value="example@gmail.com"><br><br>
+            <input type="email" name="email" value="example@gmail.com" class="form"><br><br>
             Message:<br>
-            <textarea name="message" rows="10" cols="30"></textarea><br><br>
-            <input type="submit" value="Submit">
+            <textarea name="message" rows="10" cols="30" class="form"></textarea><br><br>
+            <input id="button" type="submit" value="Submit">
         </form>
       </div>
 
       <footer>
-        copyright
+        Copyright ©
     </footer>
 
 </body>
