--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <script src="main.js"></script>
 </head>
-<body>
+<body background="./assets/images/positive.png">
     <header>
-        <h1>Amanda Newton</h1>        
-        <a href="./index.html">About</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./contact.html">Contact</a>
+        <h1>Amanda Newton</h1>
+        <div id="links">       
+            <a id="about" href="./index.html">About</a>
+            <a id="portfolio" href="./portfolio.html">Portfolio</a>
+            <a id="contact" href="./contact.html">Contact</a>
+        </div> 
    </header>
+  
    <div class="maincontent">
-        <h2>About Me</h2>
-        <img src="assets/images/amandanewton.png" alt="">
-        <p>Hello, my name is Amanda Newton! I am currently a Senior Salesforce Administrator located in Hooksett, New Hampshire and I am determined to learn the skillset of a full stack web developer! These skills will allow me to not only develop on the web, but enable me to learn Salesforce languages so I can customize the Salesforce.com platform both declaratively and programmatically! I have been writing Apex classes and Visualforce pages for about a year now, but nothing ever from scratch. My goal is to use these skills to become a Salesforce Technical Architecht and become an expert on ALL things Salesforce!</p>
-        <p>When I'm not working I enjoy running, hiking, OrangeTheory workouts, checking out local breweries, cuddling with my bernese mountain dog Alpine, taking roadtrips with my husband Russell and sampling local artisinal doughnuts! Who am I kidding, I'll travel for those doughnuts! My favorite doughnut shop to date is Blackbird Doughnuts outside of Fenway Park in Boston Massachusetts. My favorite is 'The Blackbird' or the 'Chocolate Old Fashioned'! Yum!</p>
-    </div>
+    <h2>About Me</h2>
+        <section id="main-bio">
+                <img src="assets/images/amandanewton.png" alt="Amanda Newton" id="bio-image">
+                <p>Hello, my name is Amanda Newton! I am currently a Senior Salesforce Administrator located in Hooksett, New Hampshire and I am determined to learn the skillset of a full stack web developer! These skills will allow me to not only develop on the web, but enable me to learn Salesforce languages so I can customize the Salesforce.com platform both declaratively and programmatically! I have been writing Apex classes and Visualforce pages for about a year now, but nothing ever from scratch. My goal is to use these skills to become a Salesforce Technical Architecht and become an expert on ALL things Salesforce!</p>
+                <p>When I'm not working I enjoy running, hiking, OrangeTheory workouts, checking out local breweries, cuddling with my bernese mountain dog Alpine, taking roadtrips with my husband Russell and sampling local artisanal doughnuts! Who am I kidding, I'll travel for those doughnuts! My favorite doughnut shop to date is Blackbird Doughnuts outside of Fenway Park in Boston Massachusetts. My favorite is 'The Blackbird' or the 'Chocolate Old Fashioned'! Yum!</p>
+        </section>
+            </div>
     <footer>
-        copyright
+        Copyright ©
     </footer>
 
 </body>
