--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
     <script src="main.js"></script>
 </head>
-<body>
-   <header>
+<body background="./assets/images/positive.png">
+    <header>
         <h1>Amanda Newton</h1>
-        <a href="./index.html">About</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./contact.html">Contact</a>
+        <div id="links">       
+            <a id="about" href="./index.html">About</a>
+            <a id="portfolio" href="./portfolio.html">Portfolio</a>
+            <a id="contact" href="./contact.html">Contact</a>
+        </div> 
    </header>
+
    <div class="maincontent">
         <h2>Portfolio</h2>
 
@@ -26,7 +29,7 @@
     </div>
 
     <footer>
-        copyright
+        Copyright ©
     </footer>
 
 
