--- a/portfolio.html
+++ b/portfolio.html
@@ -21,12 +21,17 @@
    <div class="maincontent">
         <h2>Portfolio</h2>
 
-        <img src="assets/images/abstract1.jpg" alt="">
-        <img src="assets/images/abstract2.jpg" alt="">
-        <img src="assets/images/abstract3.jpg" alt="">
-        <img src="assets/images/abstract4.jpg" alt="">
-        <img src="assets/images/abstract5.jpg" alt="">
-    </div>
+            <img class="images" src="assets/images/abstract1.jpg" alt="">
+            <h3>Hangman</h3>
+            <img class="images"src="assets/images/abstract2.jpg" alt="">
+            <h3>RPG Game</h3>
+            <img class="images"src="assets/images/abstract3.jpg" alt="">
+            <h3>Trivia Game</h3>
+            <img class="images" src="assets/images/abstract4.jpg" alt="">
+            <h3>Rutgers Info Widget</h3>
+            <img class="images" src="assets/images/abstract5.jpg" alt="">
+            <h3>Rock Paper Scissors</h3>
+
 
     <footer>
         Copyright ©
